maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:12: error: not enough arguments for method fini: (H: Int, L: Int)Boolean.
Unspecified value parameters H, L.
  while(!fini()){
             ^ShortestPathMaze:62: error: not found: value indic
        case -1 => if(!aMurOuest(x,y) && getIndication(adjX,adjY)==9999){setIndication(adjX,adjY,indic+1)}
                                                                                                 ^ShortestPathMaze:63: error: not found: value adjx
        case 1 => if (!aMurOuest(adjX,adjY) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                             ^ShortestPathMaze:63: error: not found: value indic
        case 1 => if (!aMurOuest(adjX,adjY) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                                        ^ShortestPathMaze:66: error: not found: value adjx
        case -1 => if(!aMurNord(adjX,adjY) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                            ^ShortestPathMaze:66: error: not found: value indic
        case -1 => if(!aMurNord(adjX,adjY) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                                       ^ShortestPathMaze:67: error: not found: value adjx
        case 1 => if(!aMurNord(x,y) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                     ^ShortestPathMaze:67: error: not found: value indic
        case 1 => if(!aMurNord(x,y) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                                ^